--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ plugins {
     id 'io.freefair.lombok' version '3.8.1'
 }
 
+ext {
+    junitJupiterVersion = '5.5.2'
+    junitPlatformVersion = '1.5.2'
+    assertjVersion = '3.12.0'
+}
+
 group 'de.hhu.educode'
 version '1.0.0' + (Boolean.valueOf(System.getProperty('release')) ? '' : '-SNAPSHOT')
 
@@ -16,8 +22,12 @@ repositories {
 }
 
 dependencies {
-    api 'org.junit.jupiter:junit-jupiter:5.5.1'
-    api 'org.assertj:assertj-core:3.11.1'
+    api "org.junit.jupiter:junit-jupiter-api:${property('junitJupiterVersion')}"
+    api "org.junit.jupiter:junit-jupiter-engine:${property('junitJupiterVersion')}"
+    api "org.junit.platform:junit-platform-launcher:${property('junitPlatformVersion')}"
+    api "org.junit.platform:junit-platform-engine:${property('junitPlatformVersion')}"
+    api "org.junit.platform:junit-platform-commons:${property('junitPlatformVersion')}"
+    api "org.assertj:assertj-core:${property('assertjVersion')}"
 }
 
 tasks.withType(JavaCompile) {
